* fully localize chart * load application-lang-xx.js files to L10n JS * add flash message to scaffold layout * start I18n for entries scaffold   * use correct date format (grid)   * use fixednumberfield in form

--- a/config/locales/de-DE.yml
+++ b/config/locales/de-DE.yml
@@ -2,6 +2,12 @@
 # by Clemens Kofler (clemens@railway.at)
 
 de-DE:
+  balance_sheet:
+    total: Summe (EUR)
+    chart_title: Monatliche Salden nach Risikoklasse (TEUR)
+    credit: 'Vermögen'
+    debit: 'Verbindlichkeit'
+  
   date:
     formats:
       default: "%d.%m.%Y"
