localize Entries in german

--- a/config/locales/en-US.yml
+++ b/config/locales/en-US.yml
@@ -5,6 +5,9 @@
     credit: 'credit'
     debit: 'debit'
 
+  entries:
+    title: Entries
+
   number:
     # Used in number_with_delimiter()
     # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
