--- a/config/locales/de-DE.yml
+++ b/config/locales/de-DE.yml
@@ -7,7 +7,10 @@ de-DE:
     chart_title: Monatliche Salden nach Risikoklasse (TEUR)
     credit: 'Vermögen'
     debit: 'Verbindlichkeit'
-  
+
+  entries:
+    title: Buchungen
+
   date:
     formats:
       default: "%d.%m.%Y"
