add chart for balance distribution across account classes

--- a/config/locales/de-DE.yml
+++ b/config/locales/de-DE.yml
@@ -6,6 +6,8 @@ de-DE:
     total: Summe (EUR)
     balances_by_risk_class_chart_title: Monatliche Salden nach Risikoklasse (TEUR)
     future_payments_chart_title: Zukünftige Zahlungen (TEUR)
+    balances_by_account_class_chart_title: Vermögensverteilung
+    unknown_account_class: unbekannt
     credit: Vermögen
     debit: Verbindlichkeit
     balances: Salden
