correct axis label to reflect latest change (8f71125d598aa234aac0b9857c37067b418793d4)

--- a/config/locales/de-DE.yml
+++ b/config/locales/de-DE.yml
@@ -3,7 +3,7 @@
 
 de-DE:
   balance_sheet:
-    total: Summe (EUR)
+    total: Summe (TEUR)
     balances_by_risk_class_chart_title: Monatliche Salden nach Risikoklasse (TEUR)
     future_payments_chart_title: Zukünftige Zahlungen (TEUR)
     balances_by_account_class_chart_title: Vermögensverteilung
